implement logout endpoint